Removed ul from nav menu, fixed footer spacing.

--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 
 nav {
     background-color: black;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: none;
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -28,34 +28,29 @@ nav {
 
 .nav-title {
     padding: 0px;
-    margin: 0px;
+    margin-right: 100px;
+    color: white;
+    background-color: black;
+    display: flex;
+    align-self: center;
+    justify-self: left;
 }
 
 #navmenu {
-    width: 100%;
-}
-
-#nav-list { 
-    list-style: none;
     display: flex;
-    justify-content:space-evenly;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-    color: white;
-}
-
-.nav-item {
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-
+    width: 100vw;
+    justify-content: space-evenly;
 }
 
 .nav-link {
     text-decoration: none;
     color: white;
     font-size: small;
+    margin: 1px;
+    padding: 5px;
+    display:flex;
+    justify-self: space-evenly;
+    align-self: center;
 }
 
 
@@ -88,7 +83,7 @@ nav {
 #month {
     border: 1px solid gray;
     background-color: lightgray;
-    width: 66%;
+    width: 650px;
     height: 20px;
     display: flex;
     align-items: center;
@@ -140,12 +135,14 @@ nav {
     align-self: center;
     text-decoration: none;
     margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .raisin-button-text {
     text-decoration: none;
     color: white;
-
 }
 
 .horiz {
@@ -179,12 +176,19 @@ nav {
     color: white;
     text-decoration: none;
     font-size: small;
+    margin: 0px;
+    padding: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 
 a {
     color: white;
     text-decoration: none;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
 }
 
 .fas{
